--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* 你的自定义样式 */
+body { 
+  margin: 0; 
+  font-family: sans-serif; 
+}
+
+.custom-scrollbar::-webkit-scrollbar { 
+  width: 6px; 
+}
+
+.custom-scrollbar::-webkit-scrollbar-track { 
+  background: transparent; 
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb { 
+  background-color: rgba(156, 163, 175, 0.5); 
+  border-radius: 20px; 
+}
+
+.font-serif { 
+  font-family: 'Noto Serif SC', serif; 
+}
